# marlin

./: .dockerignore  .env.template  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yaml  manage.py  mypy.py  package-lock.json  package.json  pyproject.toml
apps/accounts/: admin.py  apps.py  email_templates.py  exceptions.py  forms.py  models.py  urls.py  views.py
apps/carts/: admin.py  apps.py  choices.py  exceptions.py  models.py  urls.py
apps/catalog/: admin.py  apps.py  choices.py  constants.py  dataclasses.py  models.py  translation.py  urls.py  views.py
apps/core/: apps.py  dataclasses.py  exceptions.py
apps/favorites/: apps.py  urls.py
apps/orders/: admin.py  apps.py  exceptions.py  urls.py
apps/pages/: apps.py  email_templates.py  exceptions.py  forms.py  types.py  urls.py  views.py
apps/promotions/: apps.py  urls.py
apps/reviews/: admin.py  apps.py  exceptions.py  urls.py
apps/vacancies/: admin.py  apps.py  choices.py  models.py  translation.py  urls.py  views.py
config/: celery.py  settings.py  urls.py
fixtures/demo/: cart_items.json  carts.json  generate_users_orders_reviews.py  order_items.json  orders.json  product_attributes.json  product_images.json  product_nutritions.json  product_reviews.json  products.json  users.json  vacancies.json
fixtures/init/: attributes.json  categories.json  cities.json  professional_areas.json  regions.json
nginx/: default.conf  http.conf  https.conf
static/css/: 404.css  base.css  dropdown.css  error.css  footer.css  header.css  input.css  layout.css  reset.css  (+1 more)
templates/: 403.html  404.html  429.html  500.html  base.html  email_base.html  email_base.txt
(+444 files in other folders)
