[project]
name = "marlin"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.black]
line-length = 79

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-bandit>=4.1.1",
    "flake8-bugbear>=24.12.12",
    "flake8-docstrings>=1.7.0",
    "flake8-eradicate>=1.5.0",
    "flake8-quotes>=3.4.0",
    "isort>=6.0.1",
    "mypy>=1.18.1",
    "pep8-naming>=0.15.1",
    "pre-commit>=4.3.0",
    "types-requests>=2.32.4.20250913",
]
